{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 262,
  "lineage": "04d533f6-81f3-9481-702b-42543967ab01",
  "resources": [
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:loadbalancer/app/my-alb/71ee0e1b866cfd87",
            "arn_suffix": "app/my-alb/71ee0e1b866cfd87",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-316211640.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:loadbalancer/app/my-alb/71ee0e1b866cfd87",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04564af666442489e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008bd2ffe3acdd34a"
              },
              {
                "subnet_id": "subnet-03fb1ea081c16d3ce"
              }
            ],
            "subnets": [
              "subnet-008bd2ffe3acdd34a",
              "subnet-03fb1ea081c16d3ce"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.alb.module.alb.aws_security_group.this",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:listener/app/my-alb/71ee0e1b866cfd87/863b6909a6d4f3e2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:targetgroup/pref-20230321034112028100000001/9693ad68c62ef930",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:listener/app/my-alb/71ee0e1b866cfd87/863b6909a6d4f3e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:loadbalancer/app/my-alb/71ee0e1b866cfd87",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Test"
            },
            "tags_all": {
              "Environment": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.alb.aws_security_group.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:targetgroup/pref-20230321034112028100000001/9693ad68c62ef930",
            "arn_suffix": "targetgroup/pref-20230321034112028100000001/9693ad68c62ef930",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:678120838123:targetgroup/pref-20230321034112028100000001/9693ad68c62ef930",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pref-20230321034112028100000001",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:security-group/sg-04564af666442489e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04564af666442489e",
            "ingress": [],
            "name": "my-alb-20230321034112042500000002",
            "name_prefix": "my-alb-",
            "owner_id": "678120838123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f397e8e622841386",
            "association_id": "eipassoc-00e8d9e07e71a3c5f",
            "domain": "vpc",
            "id": "eipalloc-0f397e8e622841386",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-065f975db5cea20ca",
            "private_dns": "ip-10-1-96-174.eu-central-1.compute.internal",
            "private_ip": "10.1.96.174",
            "public_dns": "ec2-18-192-153-48.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.153.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:internet-gateway/igw-0c5ef13bd33d6a287",
            "id": "igw-0c5ef13bd33d6a287",
            "owner_id": "678120838123",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f397e8e622841386",
            "connectivity_type": "public",
            "id": "nat-03cf6747a385e81c0",
            "network_interface_id": "eni-065f975db5cea20ca",
            "private_ip": "10.1.96.174",
            "public_ip": "18.192.153.48",
            "subnet_id": "subnet-08c34e58e7e974c4f",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a9ff5dd02f4898b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03cf6747a385e81c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a9ff5dd02f4898b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5ef13bd33d6a287",
            "id": "r-rtb-0c05e19528def3e971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c05e19528def3e97",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:route-table/rtb-01a9ff5dd02f4898b",
            "id": "rtb-01a9ff5dd02f4898b",
            "owner_id": "678120838123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03cf6747a385e81c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:route-table/rtb-0c05e19528def3e97",
            "id": "rtb-0c05e19528def3e97",
            "owner_id": "678120838123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5ef13bd33d6a287",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb08e745e363a7b8",
            "route_table_id": "rtb-01a9ff5dd02f4898b",
            "subnet_id": "subnet-008bd2ffe3acdd34a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43c096ae0c75306",
            "route_table_id": "rtb-01a9ff5dd02f4898b",
            "subnet_id": "subnet-03fb1ea081c16d3ce"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06411b04a4c20cc51",
            "route_table_id": "rtb-01a9ff5dd02f4898b",
            "subnet_id": "subnet-0ec01a351f37ad481"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d10a7577c7a57c76",
            "route_table_id": "rtb-01a9ff5dd02f4898b",
            "subnet_id": "subnet-001d3d04611d31e96"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcbea37b78db32d8",
            "route_table_id": "rtb-0c05e19528def3e97",
            "subnet_id": "subnet-08c34e58e7e974c4f"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ebf5eca0f9e71c",
            "route_table_id": "rtb-0c05e19528def3e97",
            "subnet_id": "subnet-0488dd1cdf7a1114b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:subnet/subnet-008bd2ffe3acdd34a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008bd2ffe3acdd34a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678120838123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:subnet/subnet-03fb1ea081c16d3ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.176.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fb1ea081c16d3ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678120838123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:subnet/subnet-0ec01a351f37ad481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec01a351f37ad481",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678120838123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:subnet/subnet-001d3d04611d31e96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001d3d04611d31e96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678120838123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:subnet/subnet-08c34e58e7e974c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.96.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c34e58e7e974c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "678120838123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:subnet/subnet-0488dd1cdf7a1114b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.112.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0488dd1cdf7a1114b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "678120838123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "vpc_id": "vpc-0d082c0b4b20b14d0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:678120838123:vpc/vpc-0d082c0b4b20b14d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08ff46cd9327e3e0e",
            "default_route_table_id": "rtb-091e732c12b3395af",
            "default_security_group_id": "sg-0451c6ebd789d596d",
            "dhcp_options_id": "dopt-01689f84dbe81f5eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d082c0b4b20b14d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091e732c12b3395af",
            "owner_id": "678120838123",
            "tags": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw-prod-vpc-eu-central-1",
              "Project Name": "gw",
              "Region": "eu-central-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}